--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,9 @@
 {
   "name": "toddish-popup",
-  "main": "assets/js/jwuery.popup.js",
+  "main": [
+    "assets/js/jwuery.popup.js",
+    "assets/css/popup.css"
+  ],
   "license": "MIT",
   "dependencies": {
     "jquery": "1.6"
